@@ -8,9 +8,9 @@ import java.util.*;
 public class Solution {
     public static void main(String[] args) throws IOException {
 
-        System.out.println(maxTrailingh(List.of(5,3,6,7,4)));
-        System.out.println(maxTrailingh(List.of(4,3,2,1)));
-        System.out.println(maxTrailingh(List.of(5,3,4,1)));
+        System.out.println(maxTrailingh(Arrays.asList(5,3,6,7,4)));
+        System.out.println(maxTrailingh(Arrays.asList(4,3,2,1)));
+        System.out.println(maxTrailingh(Arrays.asList(5,3,4,1)));
 
     }
     public static int maxTrailingh(List<Integer> levels) {
